--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,60 +1,32 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
+  padding-left: 11em;
+  font-family: Georgia, "Times New Roman",
+        Times, serif;
+  color: purple;
+  background-color: #d8da3d }
+ul.navbar {
+  list-style-type: none;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-header {
-  background-color: #4CAF50;
-  color: white;
-  padding: 1em;
-  text-align: center;
-  width: 100%;
-}
-
-h1, h2 {
   margin: 0;
-}
-
-main {
-  width: 100%;
-}
-
-.parallax {
-  height: 50vh;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-#parallax1 {
-  background-image: url('https://source.unsplash.com/1600x900/?travel,world');
-}
-
-#parallax2 {
-  background-image: url('https://source.unsplash.com/1600x900/?education,learning');
-}
-
-.overlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.overlay h2 {
-  color: white;
-  font-size: 2em;
-  text-align: center;
-}
-
+  top: 2em;
+  left: 1em;
+  width: 9em }
+h1 {
+  font-family: Helvetica, Geneva, Arial,
+        SunSans-Regular, sans-serif }
+ul.navbar li {
+  background: rgb(150, 17, 17);
+  margin: 0.5em 0;
+  padding: 0.3em;
+  border-right: 1em solid black }
+ul.navbar a {
+  text-decoration: none }
+a:link {
+  color: blue }
+a:visited {
+  color: purple }
+address {
+  margin-top: 1em;
+  padding-top: 1em;
+  border-top: thin dotted }
