--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ body {
   padding-left: 11em;
   font-family: Georgia, "Times New Roman",
         Times, serif;
-  color: purple;
-  background-color: #d8da3d }
+  color: rgb(0, 0, 0);
+  background-color: #fafafa }
 ul.navbar {
   list-style-type: none;
   padding: 0;
@@ -29,4 +29,13 @@ a:visited {
 address {
   margin-top: 1em;
   padding-top: 1em;
-  border-top: thin dotted }
+  }
+.centro{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  }
+  .sium{
+    justify-content: center;
+  }
